...
            ) {
                Row(
                    modifier = Modifier.fillMaxWidth(),
                    horizontalArrangement = Arrangement.SpaceBetween
                ) {
                    CustomButton(
                        text = "Add Friend",
                        onClick = { navController.navigate("add_friend") },
                        aspectRatio = 4f,
                        modifier = Modifier.weight(1f)
                    )

                    Spacer(modifier = Modifier.width(16.dp))

                    CustomButton(
                        text = "Invitations",
                        onClick = { navController.navigate("invitations") },
                        aspectRatio = 4f,
                        modifier = Modifier.weight(1f)
                    )
                }

...
