...
            }
        }
    }

    Scaffold(
        modifier = Modifier.background(AppBackgroundColor),
        topBar = { BackTopAppBar("Add a new transaction", navController) },
        snackbarHost = { SnackbarHost(snackbarHostState) },
        content = { innerPadding ->
            Column(
                modifier = Modifier
                    .fillMaxSize()
                    .padding(innerPadding)
...
                verticalArrangement = Arrangement.spacedBy(16.dp),
                horizontalAlignment = Alignment.CenterHorizontally
            ) {
                CustomNumberField(
                    value = amount,
                    onValueChange = { addDebtViewModel.amount.value = it },
                    label = "Enter an amount",
                    placeholder = "0.00",
                    currency = currency,
                    modifier = Modifier.fillMaxWidth()
                )

                CustomEnumPickField(
...
