...
                    .padding(horizontal = 16.dp),
                horizontalAlignment = Alignment.CenterHorizontally,
                verticalArrangement = Arrangement.Top
            ) {
                Spacer(modifier = Modifier.height(16.dp))
                CustomText(
                    text = if (totalBalance >= 0) "People owe you" else "You owe",
                    fontSize = 24.sp
                )
                Spacer(modifier = Modifier.height(8.dp))
                CustomText(
                    text = "$currencySymbol${"%.2f".format(kotlin.math.abs(totalBalance))}",
                    fontSize = 64.sp
...
